@@ -1,3 +1,8 @@
+2008-06-09  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-data:
+	Add GNOME Commander ftp site to remote servers fot first-time users
+
 2008-06-05  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file-selector.cc:
